修复端口模块